--- a/home.html
+++ b/home.html
@@ -42,8 +42,8 @@
   
 <div class="slider">
   <div class="slides">
-    <a href="images/me.jpg" target="_blank">
-      <img src="images/me.jpg" alt="THE PIC OF ME">
+    <a href="IMAGES/me.jpg" target="_blank">
+      <img src="IMAGES/me.jpg" alt="THE PIC OF ME">
     </a>
   </div>
 </div>
