--- a/experience.html
+++ b/experience.html
@@ -43,8 +43,8 @@
     <br> <h6>
      <div class="slider">
   <div class="slides">
-    <a href="images/mr.diy.jpeg" target="_blank">
-      <img src="images/mr.diy.jpeg" alt="MR.DIY">
+    <a href="IMAGES/mr.diy.jpeg" target="_blank">
+      <img src="IMAGES/mr.diy.jpeg" alt="MR.DIY">
     </a>
   </div>
 </div>
