--- a/education.html
+++ b/education.html
@@ -46,8 +46,8 @@
     <strong>Universiti Malaysia Perlis (UNIMAP)</strong><br></h7>
        <div class="slider">
   <div class="slides">
-    <a href="images/unimap logo.png" target="_blank">
-      <img src="images/unimap logo.png" alt="UNIMAP">
+    <a href="IMAGES/unimap logo.png" target="_blank">
+      <img src="IMAGES/unimap logo.png" alt="UNIMAP">
     </a>
   </div>
 </div>
@@ -67,8 +67,8 @@
 <h7><strong>SMK Tun Syed Sheh Barakbah</strong><br></h7>
     <div class="slider">
   <div class="slides">
-    <a href="images/SMKTSSB.jpg" target="_blank">
-      <img src="images/SMKTSSB.jpg" alt="SMKTSSB">
+    <a href="IMAGES/SMKTSSB.jpg" target="_blank">
+      <img src="IMAGES/SMKTSSB.jpg" alt="SMKTSSB">
     </a>
   </div>
 </div>
@@ -92,8 +92,8 @@
 <h7> <strong>SJK (C) PAI TEIK</strong><br></h7>
    <div class="slider">
   <div class="slides">
-    <a href="images/sjkcpt .jpeg" target="_blank">
-      <img src="images/sjkcpt .jpeg" alt="SJK (C) PAI TEIK">
+    <a href="IMAGES/sjkcpt .jpeg" target="_blank">
+      <img src="IMAGES/sjkcpt .jpeg" alt="SJK (C) PAI TEIK">
     </a>
   </div>
 </div>
