--- a/gallery.html
+++ b/gallery.html
@@ -83,6 +83,16 @@
     var lightbox = document.getElementById("lightbox");
     var lightboxImg = document.getElementById("lightbox-img");
 
+    lightbox.style.display = "block";
+    lightboxImg.src = imgElement.src;
+  }
+
   
+  document.addEventListener("keydown", function(e) {
+    if (e.key === "Escape") {
+      document.getElementById("lightbox").style.display = "none";
+    }
+  });
+</script>  
 </body>
 </html>
